# pycounts_orixay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_orixay/: __init__.py  plotting.py  pycounts_orixay.py
tests/: einstein.txt  test_pycounts.py  test_pycounts_orixay.py
