[tool.poetry]
name = "pycounts_orixay"
version = "0.1.0"
description = "Do what the title says - count the words!"
authors = ["Orix Au Yeung"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
